Reformat models and dto
