# docs/swagger.yaml
@@ -34,8 +34,10 @@ definitions:
     - OtpLimiterError
     - CustomRecovery
     - InternalError
-  dto.CreateVehicleRequestDTO:
+  dto.CreateVehicleRequest:
     properties:
+      created_at:
+        type: string
       location:
         type: string
       model:
@@ -44,6 +46,8 @@ definitions:
         type: string
       price:
         type: integer
+      updated_at:
+        type: string
       year:
         type: integer
     type: object
@@ -116,7 +120,7 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/dto.CreateVehicleRequestDTO'
+          $ref: '#/definitions/dto.CreateVehicleRequest'
       responses:
         "201":
           description: Created response
